--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,11 @@ MANIFEST
 
 # My Test Data
 physionet.org/
-*test/
+lightning_logs/
+#*test/
 lightning_logs/*
 kddcup*
+*.pkl
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
