--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ absl-py==2.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.13
 aiosignal==1.3.2
+annotated-types==0.7.0
 anyio==4.8.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -21,15 +22,20 @@ charset-normalizer==3.4.1
 click==8.1.8
 combo==0.1.3
 comm==0.2.2
-contourpy==1.3.1
+contourpy==1.3.0
 cycler==0.12.1
 debugpy==1.8.12
 decorator==5.1.1
 defusedxml==0.7.1
 dill==0.3.9
+dnspython==2.7.0
+email-validator==2.3.0
 et_xmlfile==2.0.0
 exceptiongroup==1.2.2
 executing==2.2.0
+fastapi==0.116.1
+fastapi-cli==0.0.10
+fastapi-cloud-cli==0.1.5
 fastjsonschema==2.21.1
 filelock==3.17.0
 flatbuffers==25.1.24
@@ -48,10 +54,13 @@ grpcio==1.70.0
 h11==0.14.0
 h5py==3.12.1
 httpcore==1.0.7
+httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
 ipykernel==6.29.5
-ipython==8.31.0
+ipython==8.18.1
 ipywidgets==8.1.5
 isoduration==20.11.0
 jedi==0.19.2
@@ -74,15 +83,16 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
 keras==3.8.0
-kiwisolver==1.4.8
+kiwisolver==1.4.7
+lark==1.2.2
 libclang==18.1.1
 lightning-utilities==0.14.0
-llvmlite==0.44.0
+llvmlite==0.43.0
 lxml==5.3.1
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplotlib==3.10.0
+matplotlib==3.9.4
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 mistune==3.1.1
@@ -96,23 +106,34 @@ nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
-networkx==3.4.2
+networkx==3.2.1
 notebook==7.3.2
 notebook_shim==0.2.4
-numba==0.61.0
+numba==0.60.0
 numpy==2.0.2
+nvidia-cublas-cu11==11.11.3.6
 nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu11==11.8.87
 nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu11==11.8.89
 nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu11==11.8.89
 nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu11==9.1.0.70
 nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu11==10.9.0.58
 nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu11==10.3.0.86
 nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu11==11.4.1.48
 nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu11==11.7.5.86
 nvidia-cusparse-cu12==12.3.1.170
 nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu11==2.21.5
 nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu11==11.8.86
 nvidia-nvtx-cu12==12.4.127
 obspy==1.4.1
 openpyxl==3.1.5
@@ -135,13 +156,17 @@ psutil==6.1.1
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pycparser==2.22
+pydantic==2.11.7
+pydantic_core==2.33.2
 Pygments==2.19.1
 pynndescent==0.5.13
 pyod==2.0.3
 pyparsing==3.2.1
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
 python-json-logger==3.2.1
+python-multipart==0.0.20
 pytorch-lightning==2.5.0.post0
 pytz==2024.2
 PyYAML==6.0.2
@@ -151,18 +176,24 @@ requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rfc3987==1.3.8
+rfc3987-syntax==1.1.0
 rich==13.9.4
+rich-toolkit==0.15.1
+rignore==0.6.4
 rpds-py==0.22.3
-scikit-learn==1.7.0
-scipy==1.15.1
+scikit-learn==1.6.1
+scipy==1.13.1
 seaborn==0.13.2
 Send2Trash==1.8.3
+sentry-sdk==2.37.0
+shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 soundfile==0.13.1
 soupsieve==2.6
 SQLAlchemy==1.4.54
 stack-data==0.6.3
+starlette==0.47.3
 strict-rfc3339==0.7
 sultan==0.9.1
 sympy==1.13.1
@@ -183,7 +214,9 @@ tqdm==4.67.1
 traitlets==5.14.3
 triton==3.2.0
 TSFEDL==1.0.7.7
+typer==0.17.4
 types-python-dateutil==2.9.0.20241206
+typing-inspection==0.4.1
 typing_extensions==4.12.2
 tzdata==2025.1
 ucimlrepo==0.0.7
@@ -191,13 +224,18 @@ umap==0.1.1
 umap-learn==0.5.7
 uri-template==1.3.0
 urllib3==2.3.0
+uvicorn==0.35.0
+uvloop==0.21.0
 validate-email==1.3
+watchfiles==1.1.0
 wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+websockets==15.0.1
 Werkzeug==3.1.3
 wfdb==4.2.0
 widgetsnbextension==4.0.13
 wrapt==1.17.2
 yarl==1.18.3
+zipp==3.23.0
